# ubuntu-download-manager

./: .bzrignore  CMakeLists.txt  HACKING  LICENSE  common-installs-config.pri  common-project-config.pri  common-vars.pri  download-manager.pro  download-manager.pro.THIS  snapcraft.yaml
src/extractor/: CMakeLists.txt
tests/: CMakeLists.txt  apparmor.h  application.h  base_testcase.cpp  base_testcase.h  daemon_testcase.cpp  daemon_testcase.h  database.h  dbus_connection.h  dbus_proxy.h  download.h  factory.h  file_manager.h  filename_mutex.h  irl_tests.py  local_tree_testcase.cpp  local_tree_testcase.h  main.cpp.THIS  matchers.h  pending_reply.h  process.h  process_factory.h  queue.h  sm_file_download.h  squid.cpp  squid.h  system_network_info.h  test_apn_request_factory.cpp  test_apn_request_factory.h  test_apparmor.cpp  test_apparmor.h  test_base_download.cpp  test_base_download.h  test_cancel_download_transition.cpp  test_cancel_download_transition.h  test_client_download.cpp  test_client_download.h  test_client_manager.cpp  test_client_manager.h  test_daemon.cpp  (+32 more)
tests/abi-compliance/: abi.xml.in
tests/common/: CMakeLists.txt  apparmor.h  base_testcase.cpp  base_testcase.h  daemon_testcase.cpp  daemon_testcase.h  file_manager.h  local_tree_testcase.cpp  local_tree_testcase.h  matchers.h  network_reply.h  network_session.h  request_factory.h  testing_interface.cpp  testing_interface.h
tests/data/: squid.conf.in
tests/downloads/: CMakeLists.txt
tests/uploads/: CMakeLists.txt
ubuntu-download-manager/: CMakeLists.txt  main.cpp  ubuntu-download-manager.pro
ubuntu-download-manager-client-tests/: CMakeLists.txt  error.h  local_tree_testcase.cpp  local_tree_testcase.h  main.cpp  main.cpp.THIS  test_download.cpp  test_download.h  test_download_manager_watch.cpp  test_download_manager_watch.h  test_download_watch.cpp  test_download_watch.h  test_downloads_list.cpp  test_downloads_list.h  test_group_manager_watch.cpp  test_group_manager_watch.h  test_group_watch.cpp  test_group_watch.h  test_manager.cpp  test_manager.h  ubuntu-download-manager-client-tests.pro  ubuntu-download-manager-client-tests.pro.THIS
ubuntu-download-manager-common/: CMakeLists.txt  ubuntu-download-manager-common.pc.in  ubuntu-download-manager-common.pro  ubuntu_download_manager_common_global.h
ubuntu-download-manager-common-tests/: CMakeLists.txt  main.cpp  test_metadata.cpp  test_metadata.h  ubuntu-download-manager-common-tests.pro
ubuntu-download-manager-priv/: CMakeLists.txt  app-downloader-lib_global.h  ubuntu-download-manager-priv.pro  ubuntu-download-manager-priv.pro.THIS
ubuntu-download-manager-priv/downloads/: daemon.cpp  daemon.h  download.cpp  download.h  download_adaptor.cpp  download_adaptor.h  download_manager_adaptor.cpp  download_manager_adaptor.h  downloads_db.cpp  downloads_db.h  factory.cpp  factory.h  file_download.cpp  file_download.h  group_download.cpp  group_download.h  group_download_adaptor.cpp  group_download_adaptor.h  manager.cpp  manager.h  mms_file_download.cpp  mms_file_download.h  queue.cpp  queue.h  sm_file_download.cpp  sm_file_download.h
ubuntu-download-manager-priv/system/: apn_request_factory.cpp  apn_request_factory.h  apparmor.cpp  apparmor.h  application.cpp  dbus_connection.cpp  dbus_connection.h  dbus_proxy.h  file_manager.cpp  file_manager.h  filename_mutex.cpp  filename_mutex.h  logger.cpp  logger.h  network_reply.cpp  network_reply.h  process.cpp  process.h  process_factory.cpp  process_factory.h  request_factory.cpp  request_factory.h  system_network_info.cpp  system_network_info.h  timer.cpp  timer.h  uuid_factory.cpp  uuid_factory.h
ubuntu-download-manager-priv/uploads/: upload_manager_adaptor.cpp
ubuntu-download-manager-test-daemon/: CMakeLists.txt  main.cpp  testing_daemon.h  testing_file_download.cpp  testing_file_download.h  testing_interface.cpp  testing_manager.cpp  testing_manager.h  testing_manager_adaptor.h  ubuntu-download-manager-test-daemon.pro  ubuntu-download-manager-test-daemon.pro.THIS
ubuntu-download-manager-test-lib/: CMakeLists.txt  ubuntu-download-manager-test-lib.pro  ubuntu-download-manager-test-lib_global.h  ubuntudownloadmanagertestlib.cpp  ubuntudownloadmanagertestlib.h
ubuntu-download-manager-tests/: CMakeLists.txt  base_testcase.cpp  base_testcase.h  fake.cpp  fake.h  fake_apparmor.cpp  fake_apparmor.h  fake_application.cpp  fake_application.h  fake_dbus_connection.cpp  fake_dbus_connection.h  fake_download.cpp  fake_download.h  fake_download_factory.cpp  fake_download_factory.h  fake_download_manager.cpp  fake_download_manager.h  fake_download_queue.cpp  fake_download_queue.h  fake_file_manager.h  fake_network_reply.cpp  fake_network_reply.h  fake_process.cpp  fake_process.h  fake_process_factory.cpp  fake_process_factory.h  fake_qnetwork_reply.cpp  fake_qnetwork_reply.h  fake_request_factory.cpp  fake_request_factory.h  fake_system_network_info.cpp  fake_system_network_info.h  fake_timer.h  fake_uuid_factory.cpp  fake_uuid_factory.h  irl_tests.py  main.cpp  test_apn_request_factory.cpp  test_apn_request_factory.h  test_base_download.cpp  (+43 more)
ubuntu-download-manager-tests/client/: daemon_testcase.cpp  daemon_testcase.h  test_download_watch.cpp  test_download_watch.h  test_group_watch.h
ubuntu-download-manager-tests/downloads/: test_base_download.cpp  test_base_download.h  test_daemon.cpp  test_daemon.h  test_download.cpp  test_download.h  test_download_factory.cpp  test_download_factory.h  (+10 more)
ubuntu-upload-manager-common/: CMakeLists.txt  test.h  ubuntu-upload-manager-common.pc.in  ubuntu-upload-manager-common.pro  ubuntu-upload-manager-common_global.h
ubuntu-upload-manager-priv/: CMakeLists.txt  ubuntu-upload-manager-priv.pro  ubuntu-upload-manager-priv.pro.THIS
udm-common/: CMakeLists.txt  udm-common.pc.in  udm-common.pro  udmcommon.cpp  udmcommon.h
udm-priv-common/: CMakeLists.txt  udm-priv-common.pro
udm-priv-common-tests/: CMakeLists.txt  main.cpp  test_download_queue.cpp  test_download_queue.h  transfer.h  udm-priv-common-tests.pro
udm-testing/: CMakeLists.txt  udm-testing.pro  udm-testing_global.h
(+938 files in other folders)
